[package]
name = "quickhull"
version = "0.1.0"
authors = ["Duncan Freeman <dfreeman@lucidyne.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.22"

[dev-dependencies]
criterion = "0.3"
klystron = { git = "https://github.com/Masterchef365/klystron.git", rev = "da1c5fef8fa22bc19690b38e106bec5bd4d6fddb" }
anyhow = "1"
rand = "0.7"
